# Website-Textextraction-Selenium

./: .env.example  README.md  Volltextextraktion_Selenium_MD_Colab.ipynb  Website-Textextraction-Selenium.ipynb  Website_Textextraction_Selenium.ipynb  colab_deployment_fixed.py  pyproject.toml  run.py
app/: anonymizer.py  config.py  converter.py  http_fetcher.py  js_fetcher.py  llm.py  logging_setup.py  main.py  metrics.py  preflight.py  rate_limiter.py  schemas.py  utils.py
deploy/: nginx.conf
helper/: loadtest.py  test_urls.txt
